--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,14 @@
 .vs/
 Publish/
 .vs/
+
+# Ignorar carpetas bin y obj
+bin/
+obj/
+
+# Ignorar archivos de compilación comunes
+*.dll
+*.pdb
+*.exe
+*.bak
+*.swp
