--- a/BOL/BOL.csproj
+++ b/BOL/BOL.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BOL_Categorias.cs" />
     <Compile Include="BOL_Recursos.cs" />
     <Compile Include="BOL_Usuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
