--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Conexion.cs" />
     <Compile Include="DAL_Categorias.cs" />
+    <Compile Include="DAL_Marcas.cs" />
     <Compile Include="DAL_Usuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
