--- a/BOL/BOL.csproj
+++ b/BOL/BOL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="BOL_Categorias.cs" />
     <Compile Include="BOL_Marcas.cs" />
+    <Compile Include="BOL_Productos.cs" />
     <Compile Include="BOL_Recursos.cs" />
     <Compile Include="BOL_Usuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
