feat: Implementar Vista Dashboard se diseño la vista para el dashboard y carga de los card de ventas, productos y clientes

--- a/BOL/BOL.csproj
+++ b/BOL/BOL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="BOL_Marcas.cs" />
     <Compile Include="BOL_Productos.cs" />
     <Compile Include="BOL_Recursos.cs" />
+    <Compile Include="BOL_Reportes.cs" />
     <Compile Include="BOL_Usuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
