--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DAL_Categorias.cs" />
     <Compile Include="DAL_Marcas.cs" />
     <Compile Include="DAL_Productos.cs" />
+    <Compile Include="DAL_Reportes.cs" />
     <Compile Include="DAL_Usuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
