--- a/GUIADMIN/packages.config
+++ b/GUIADMIN/packages.config
@@ -2,9 +2,15 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
+  <package id="ClosedXML" version="0.104.2" targetFramework="net48" />
+  <package id="ClosedXML.Parser" version="1.2.0" targetFramework="net48" />
+  <package id="DocumentFormat.OpenXml" version="3.1.1" targetFramework="net48" />
+  <package id="DocumentFormat.OpenXml.Framework" version="3.1.1" targetFramework="net48" />
+  <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net48" />
   <package id="Font.Awesome" version="5.15.4" targetFramework="net48" />
   <package id="jQuery" version="3.7.0" targetFramework="net48" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net48" />
+  <package id="jQuery.UI.Combined" version="1.14.1" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc.es" version="5.2.9" targetFramework="net48" />
@@ -21,6 +27,7 @@
   <package id="Microsoft.AspNetCore.Components.Web" version="3.1.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Metadata" version="3.1.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection" version="3.1.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.0" targetFramework="net48" />
@@ -32,11 +39,13 @@
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="RBush" version="4.0.0" targetFramework="net48" />
+  <package id="SixLabors.Fonts" version="1.0.0" targetFramework="net48" />
   <package id="SweetAlert.Bootstrap" version="1.0.1" targetFramework="net48" />
   <package id="SweetAlert2" version="1.0.1" targetFramework="net48" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="4.7.0" targetFramework="net48" />
